# mcp-tensorboard

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/mcp_tensorboard/: __init__.py  __main__.py  data_reader.py  server.py  types.py
tests/: test_server.py
