[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "mcp-tensorboard"
version = "0.1.0"
description = "MCP server exposing TensorBoard data via FastMCP"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "fzi-research" }]

dependencies = [
    "mcp>=1.0.0",
    "tensorboard>=2.19",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-mock>=3.10",
    "pytest-asyncio>=0.23",
]

[project.scripts]
mcp-tensorboard = "mcp_tensorboard.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_tensorboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -ra --strict-markers"
pythonpath = ["src"]
